tests/invalid/generated_binop_sub_bool_bytearray/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bool = True
    y: bytearray = bytearray(b"hello")
    z = x - y
